# alphabet_generator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Doc/: README.md
Init/: NCTUChallenge.ini  example.ini  exampleStreaming.ini  flexfringeStreamingTest.ini
Src/: CMakeLists.txt  main.cpp
Src/Transformers/: CMakeLists.txt  FeatureBase.h  TransformerBase.cpp  TransformerBase.h  TransformerFactory.cpp  TransformerFactory.h
Src/Transformers/BastaTransformer/: BastaFeatures.cpp  BastaFeatures.h  BastaTransformer.cpp  BastaTransformer.h  StreamingBastaFeatures.cpp  StreamingBastaFeatures.h  StreamingBastaTransformer.cpp  StreamingBastaTransformer.h
Src/Transformers/BastaTransformer/FeatureParameters/: NCTUChallengeParams.ini  NCTUParams.ini  exampleParams.ini
Src/Transformers/PairwiseBastaTransformer/: PairwiseBastaFeatures.cpp  PairwiseBastaFeatures.h  PairwiseBastaTransformer.cpp  PairwiseBastaTransformer.h
Src/Transformers/PairwiseBastaTransformer/FeatureParameters/: NCTUParams.ini  exampleParams.ini
Src/Transformers/StreamingBastaTransformer/: StreamingBastaFeatures.cpp  StreamingBastaFeatures.h  StreamingBastaTransformer.cpp  StreamingBastaTransformer.h
Src/Transformers/StreamingBastaTransformer/FeatureParameters/: NCTUParams.ini  exampleParams.ini
Src/Transformers/TestTransformer/: TestTransformer.cpp  TestTransformer.h
Src/Util/: CMakeLists.txt  Host.cpp  Host.h  TransformerFactory.cpp  TransformerFactory.h  TransformerParameters.cpp  TransformerParameters.h
Src/Windows/: CMakeLists.txt  FixedSizeWindow.cpp  FixedSizeWindow.h  StochasticWindow.cpp  StochasticWindow.h  WindowBase.cpp  WindowBase.h
Test/: CMakeLists.txt  README.md  TestStreaming.cpp  TestStreaming.py
Util/: CMakeLists.txt  GlobalParameters.h  HelperFunctions.cpp  HelperFunctions.h  InputParser.cpp  InputParser.h
